update cargo.toml to exclude flipper

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ members = [
     "pallets/template",
     "runtime",
 ]
+exclude = [
+    "smart contract/flipper"
+]
 [profile.release]
 panic = "unwind"
